<resources>
    <string name="app_name">LoginAndSignUpWithFirebase</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign-In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="do_you_forgot_your_password">Do you forgot your password ?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign-Up</string>
    <string name="your_all_notes">Your All Notes</string>

</resources>